# gamechanger-data

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  INSTALL-UPGRADE.md  README.md  data.txt  gather_crawler_output.py  pyproject.toml  pytest.ini  setup.py  test_ingest_command.sh  vscode_debug_api.py
common/: README.md  __init__.py
common/document_parser/: Document.py  README.md  __init__.py  __main__.py  cli.py  dates_extract.py  doc_types_list.json  issuance_ref.py  output_schema.json  process.py  ref_utils.py  reference_implementation.ipynb  test_ref.py  validators.py
common/tests/: __init__.py
common/utils/: __init__.py  file_utils.py  mixins.py  network.py  s3.py  (+4 more)
configuration/: .gitignore  README.md  __init__.py  __main__.py  cli.py  defaults.py  enums.py  helpers.py  providers.py  renderers.py  utils.py  validators.py
dataPipelines/: .gitignore  README.md  __init__.py
dataScience/: .dockerignore  Makefile  README.md  setup.py  setup_env.sh
dev/: README.md  __init__.py  docker-compose.yaml
dev_tools/: combined_entities.csv  docker-compose.yaml
devtools/: docker-compose.yaml
gamechanger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gamechangerml/: __init__.py  setup_env.sh
gc_clone_maker/: cli.py  clone_zip_mover.py  gc_clone_maker.py
gc_crawler_status_monitor/: cli.py  crawler_monitor.py
notification/: slack.py
paasJobs/: README.md  configure_repo.sh  configure_repo_cmd.bat  job_runner.sh  neo4jTest.py  neo4jTester.py
raw/: SAMM_Chapter_1.html  SAMM_Chapter_2.html  SAMM_Chapter_3.html
rpa/: README.md  cli.py  edl_zip_mover.py  rpa_landing_zone_mover.py  s3.py
scripts/: example-runs.md  launch.json  settings.json  steps.sh
(+1396 files in other folders)
