[tool.poetry]
name = "gamechanger-data"
version = "1.5.0"
description = ""
authors = ["Booz Allen Hamilton <gamechanger@advana>"]

[tool.poetry.dependencies]
python = "3.10.3"
tensorflow = "^2.8.0"
tensorboard = "^2.8.0"
tensorflow-estimator = "^2.8.0"
spacy = "^3.2.4"
nltk = "^3.7"
torch = "^1.11.0"
torchvision = "^0.12.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0.tar.gz"}
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0.tar.gz"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"}
PyPDF2 = "^1.27.4"
elasticsearch = "7.13.4"
neo4j = "^4.4.2"
networkx = "^2.8"
transformers = "^4.18.0"
boto3 = "^1.21.40"
annoy = "^1.17.0"
filetype = "^1.0.10"
gensim = "^4.1.2"
jsonschema = "^4.4.0"
ocrmypdf = "^13.4.2"
pikepdf = "^5.1.1"
psycopg2-binary = "^2.9.3"
redis = "^4.2.2"
txtai = "^4.3.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.17.6"
PyMuPDF = "^1.19.6"
gamechangerml = {path = "../gamechanger-ml/", develop = true}
syntok = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pytest = "^7.1.1"
flake8 = "^4.0.1"
devtools = "^0.8.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
mypy = "^0.942"
pylint = "^2.13.5"
hypothesis = "^6.43.1"
typing-extensions = "^4.1.1"
xlrd = "^2.0.1"
w3lib = "^1.22.0"
xhtml2pdf = "^0.2.8"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
